--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
-<голова>
-    <мета шлако="UTF-8">
-    <мета ім'я = "переклад" vmist = "ширина = ширина пристрой, початкова шкала = 1,0" >
-    <назва>Сканувана рота</назва>
-< / голова >
-<тило>
-    <дів клас="контейнер">
-        <кнопка Ідентифікатор="addProductBtn">Додати товар</кнопка>
-        <кнопка Ідентифікатор="povérnenniaProductBtn">Повоернути товар</кнопка>
-    </дів>
-    <сценарій src="script.js"></сценарій>
-</тило>
-< / html >
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сканувана рота</title>
+</head>
+<body>
+    <div class="container">
+        <button id="addProductBtn">Додати товар</button>
+        <button id="returnProductBtn">Повернути товар</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
